Add cv_id field to Series form & detail template

--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -251,6 +251,11 @@
         </div>
         {% endif %}
       {% endwith %}
+      <br />
+      <p><b>Metron ID:</b> {{ series.id }}</p>
+      {% if series.cv_id %}
+      <p><b>Comic Vine ID:</b> {{ series.cv_id }}</p>
+      {% endif %}
     </div>
     <!-- end series detail info -->
     <!-- associated series -->
