Add cv_id field to Team form & detail template

--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -193,6 +193,11 @@
         </div>
         {% endif %}
       {% endwith %}
+      <br />
+      <p><b>Metron ID:</b> {{ team.id }}</p>
+      {% if team.cv_id %}
+      <p><b>Comic Vine ID:</b> {{ team.cv_id }}</p>
+      {% endif %}
     </div>
     <!-- end misc info -->
   </div>
