Add field to filter by cv_id field

--- a/comicsdb/templates/comicsdb/issue_search_box.html
+++ b/comicsdb/templates/comicsdb/issue_search_box.html
@@ -76,6 +76,12 @@
       </div>
     </div>
     <div class="field">
+      <label class="label">Comic Vine ID</label>
+      <div class="control">
+        <input class="input" type="text" name="cv_id" placeholder="Enter Comic Vine ID">
+      </div>
+    </div>
+    <div class="field">
       <div class="control">
         <button class="button is-link">Filter</button>
       </div>
