Add link to api-guidelines to the home page

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -79,6 +79,7 @@
         Want to tag your comic archives with metadata from Metron? Head over Github
         and install <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>.
       </p>
+      <p class="content">For further information on the API, please refer to the <a href="{% url 'flatpage:api-guidelines' %}">API Guidelines</a>.</p>
     </article>
   </div>
   <div class="tile is-5 is-parent is-vertical">
