Add link in Footer to PyCharm.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,32 +1,33 @@
 <footer class="footer has-background-dark has-text-light">
-  <!-- columns -->
-  <div class="columns">
-    <!-- contact info -->
-    <div class="column is-one-quarter">
-      <h4>Contact Us</h4>
-      <p><a href="mailto:bpepple@metron.cloud">Email Site Admin</a></p>
-      <p><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></p>
-      <p><a href="https://github.com/bpepple/metron/discussions">Github Discussions</a></p>
+    <!-- columns -->
+    <div class="columns">
+        <!-- contact info -->
+        <div class="column is-one-quarter">
+            <h4>Contact Us</h4>
+            <p><a href="mailto:bpepple@metron.cloud">Email Site Admin</a></p>
+            <p><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></p>
+            <p><a href="https://github.com/bpepple/metron/discussions">Github Discussions</a></p>
+        </div>
+        <!-- end contact info -->
+        <!-- misc -->
+        <div class="column is-three-quarters">
+            <p class="has-text-left">
+                Built with <a href="https://www.djangoproject.com/"><span id="django-logo">django</span></a>,
+                <a href="https://bulma.io"><span id="bulma-logo">Bulma</span></a>, and <a
+                    href="https://www.jetbrains.com/pycharm/"><span id="pycharm-logo">PyCharm</span></a>
+            </p>
+            <br/>
+            <p class="has-text-left">
+                This work is licensed under a
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                    Creative Commons Attribution-ShareAlike 4.0 International License
+                </a>, except where noted otherwise.
+                <br/>
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative
+          Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"/></a>
+            </p>
+        </div>
+        <!-- end misc -->
     </div>
-    <!-- end contact info -->
-    <!-- misc -->
-    <div class="column is-three-quarters">
-      <p class="has-text-left">
-        Built with <a href="https://www.djangoproject.com/"><span id="django-logo">django</span></a>
-        and <a href="https://bulma.io"><span id="bulma-logo">Bulma</span></a>
-      </p>
-      <br />
-      <p class="has-text-left">
-        This work is licensed under a
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-          Creative Commons Attribution-ShareAlike 4.0 International License
-        </a>, except where noted otherwise.
-        <br />
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative
-          Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>
-      </p>
-    </div>
-    <!-- end misc -->
-  </div>
-  <!-- end columns -->
+    <!-- end columns -->
 </footer>
