--- a/users/templates/change_password.html
+++ b/users/templates/change_password.html
@@ -2,16 +2,16 @@
 {% load static %}
 
 {% block content %}
+<!-- messages -->
 {% if messages %}
   {% for message in messages %}
-    {% if message.tags == "success" %}
-    <div class="notification is-success">
+    <div class="notification is-{{ message.tags }}">
       <button class="delete"></button>
       {{ message }}
-    </div> 
-    {% endif %}
+    </div>
   {% endfor %}
 {% endif %}
+<!-- end messages -->
 <section class="section">
   <div class="container">
     <h1 class="title">Change Password Form</h1>
