--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,48 +1,38 @@
 {% extends "base.html" %}
-{% load widget_tweaks %}
+{% load bulma_tags %}
 
 {% block page-title %}Login Form{% endblock page-title %}
 
 {% block content %}
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Login</h1>
-      <form method="post">
-        {% csrf_token %}
-        {% if form.errors %}
-          {% for field in form %}
+  <div class="container">
+    <h1 class="title">Login</h1>
+    <form method="post">
+      {% csrf_token %}
+      {% for field in form.visible_fields %}
+        <div class="field" data-field-name="{{ field.name }}">
+          <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                 for="{{ field.id_for_label }}">{{ field.label }}</label>
+          <div class="control">
+            {{ field|add_field_class:'input' }}
             {% for error in field.errors %}
-              <div class="notification is-danger">
-                <strong>{{ error|escape }}</strong>
-              </div>
+              <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
             {% endfor %}
-          {% endfor %}
-          {% for error in form.non_field_errors %}
-            <div class="notification is-danger">
-              <strong>{{ error|escape }}</strong>
-            </div>
-          {% endfor %}
-        {% endif %}
-        {% for field in form %}
-          <div class="field">
-            <label class="label">{{ field.label }}</label>
-            <div class="control">{% render_field field class+="input" %}</div>
             {% if field.help_text %}
-              <ul>
-                <li class="help">{{ field.help_text|safe }}</li>
-              </ul>
+              <p class="help">
+                {{ field.help_text|safe }}
+              </p>
             {% endif %}
           </div>
-        {% endfor %}
-        <div class="field">
-          <div class="control">
-            <button class="button is-link" type="submit">Login</button>
-          </div>
         </div>
-        <div class="field">
-          <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+      {% endfor %}
+      <div class="field">
+        <div class="control">
+          <button class="button is-link" type="submit">Login</button>
         </div>
-      </form>
-    </div>
-  </section>
+      </div>
+      <div class="field">
+        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+      </div>
+    </form>
+  </div>
 {% endblock %}
