--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %}
+{% load bulma_tags %}
 
 {% block title %}Enter new password{% endblock %}
 
@@ -9,29 +9,21 @@
       <h1 class="title">Set a new password!</h1>
       <form method="POST">
         {% csrf_token %}
-        {% if form.errors %}
-          {% for field in form %}
-            {% for error in field.errors %}
-              <div class="notification is-danger">
-                <strong>{{ error|escape }}</strong>
-              </div>
-            {% endfor %}
-          {% endfor %}
-          {% for error in form.non_field_errors %}
-            <div class="notification is-danger">
-              <strong>{{ error|escape }}</strong>
+        {% for field in form.visible_fields %}
+          <div class="field" data-field-name="{{ field.name }}">
+            <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
+                   for="{{ field.id_for_label }}">{{ field.label }}</label>
+            <div class="control">
+              {{ field|add_field_class:'input' }}
+              {% for error in field.errors %}
+                <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
+              {% endfor %}
+              {% if field.help_text %}
+                <p class="help">
+                  {{ field.help_text|safe }}
+                </p>
+              {% endif %}
             </div>
-          {% endfor %}
-        {% endif %}
-        {% for field in form %}
-          <div class="field">
-            <label class="label">{{ field.label }}</label>
-            <div class="control">{% render_field field class+="input" %}</div>
-            {% if field.help_text %}
-              <ul>
-                <li class="help">{{ field.help_text|safe }}</li>
-              </ul>
-            {% endif %}
           </div>
         {% endfor %}
         <div class="field">
