--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,42 +1,33 @@
 {% extends "base.html" %}
-{% load widget_tweaks %}
+{% load bulma_tags %}
 
 {% block page-title %}Password Reset Form{% endblock page-title %}
 
 {% block content %}
-  <section class="section">
-    <div class="container">
-      <h1 class="title">Forgot your password?</h1>
-      <p class="subtitle">Enter your email address below, and we'll email instructions for setting a new one.</p>
-      <form method="POST">
-        {% csrf_token %}
-        {% if form.errors %}
-          {% for field in form %}
-            {% for error in field.errors %}
-              <div class="notification is-danger">
-                <strong>{{ error|escape }}</strong>
-              </div>
-            {% endfor %}
+  <div class="container">
+    <h1 class="title">Forgot your password?</h1>
+    <p class="subtitle">Enter your email address below, and we'll email instructions for setting a new one.</p>
+    <form method="POST">
+      {% csrf_token %}
+      <div class="field" data-field-name="email">
+        <label class="label {{ form.required_css_class }}" for="email">Email</label>
+        <div class="control">
+          {{ form.email|add_field_class:'input' }}
+          {% for error in form.email.errors %}
+            <span class="help is-danger {{ form.error_css_class }}">{{ error }}</span>
           {% endfor %}
-          {% for error in form.non_field_errors %}
-            <div class="notification is-danger">
-              <strong>{{ error|escape }}</strong>
-            </div>
-          {% endfor %}
-        {% endif %}
-        <div class="field">
-          <label class="label">{{ form.email.label }}</label>
-          <div class="control">{% render_field form.email class+="input" %}</div>
-          {% if field.help_text %}
-            <ul><li class="help">{{ field.help_text|safe }}</li></ul>
+          {% if form.email.help_text %}
+            <p class="help">
+              {{ form.email.help_text|safe }}
+            </p>
           {% endif %}
         </div>
-        <div class="field">
-          <div class="control">
-            <button class="button is-link" type="submit">Send me instructions!</button>
-          </div>
+      </div>
+      <div class="field">
+        <div class="control">
+          <button class="button is-link" type="submit">Send me instructions!</button>
         </div>
-      </form>
-    </div>
-  </section>
+      </div>
+    </form>
+  </div>
 {% endblock %}
