--- a/users/templates/registration/signup.html
+++ b/users/templates/registration/signup.html
@@ -14,6 +14,25 @@
     {% for field in form.hidden_fields %}
       {{ field }}
     {% endfor %}
+    <!-- Error notifications -->
+    {% if form.errors %}
+      {% for field in form %}
+        {% for error in field.errors %}
+        <div class="notification is-danger">
+          <button class="delete"></button>
+          <strong>{{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+      {% endfor %}
+      {% for error in form.non_field_errors %}
+      <div class="notification is-danger">
+        <button class="delete"></button>
+        <strong>{{ error|escape }}</strong>
+      </div>
+      {% endfor %}
+    {% endif %}
+    <!-- end notifications -->
+    <!-- form fields -->
     {% for field in form.visible_fields %}
       <div class="field" data-field-name="{{ field.name }}">
         <label class="label{% if field.field.required %} {{ form.required_css_class }}{% endif %}"
@@ -39,5 +58,6 @@
         <button class="button is-link" type="submit">Sign up</button>
       </div>
     </div>
+    <!-- end form fields -->
   </form>
 {% endblock %}
