More refactoring of the navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -147,11 +147,13 @@
         </span>
       </a>
       <div class="navbar-end">
+      {% if user.is_authenticated %}
+        <a class="navbar-item" href="{% url 'change_profile' %}">
+          Account
+        </a>
+      {% endif %}
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary" href="{% url 'signup' %}">
-              <strong>Sign up</strong>
-            </a>
             {% if user.is_authenticated %}
               <form>
                 {% csrf_token %}
@@ -160,6 +162,9 @@
                 </button>
               </form>
             {% else %}
+              <a class="button is-primary" href="{% url 'signup' %}">
+                <strong>Sign up</strong>
+              </a>
               <a class="button is-light" href="{% url 'login' %}">
                 Log in
               </a>
