--- a/templates/404.html
+++ b/templates/404.html
@@ -1,19 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section>
-  <div class="container">
-    <div class="columns is-vcentered">
-      <div class="column has-text-centered">
-        <div class="box">
-          <h1 class="title">404 Page Not Found</h1>
-          <p class="subtitle">An unexpected error has occurred.</p>
-          <br />
-          <a class="button is-primary" href="{% url 'home' %}">Home</a>
-          <br />
+  <section>
+    <div class="container">
+      <div class="columns is-vcentered">
+        <div class="column has-text-centered">
+          <div class="box">
+            <h1 class="title">404 Page Not Found</h1>
+            <p class="subtitle">We couldn't find the page you're looking for. Here are a few things to try out:</p>
+            <ul>
+              <li>Double-check the URL. Are you sure you typed it out correctly?
+              <li>Does the URL end with a backslash?
+            </ul>
+            <br/>
+            <a class="button is-primary" href="{% url 'home' %}">Home</a>
+            <br/>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 {% endblock %}
