--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% block content %}
   <section>
     <div class="container">
-      <div class="columns is-vcentered">
+      <div class="columns is-centered">
         <div class="column has-text-centered">
           <div class="box">
             <h1 class="title">404 Page Not Found</h1>
