Tweak header text size

--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -10,8 +10,8 @@
 {% block content %}
   <!-- header -->
   <header class="block has-text-centered">
-    <h1 class="title">Metron Database Statistics</h1>
-    <h2 class="subtitle">Last Updated at: {{ update_time }}</h2>
+    <h3 class="title is-3">Metron Database Statistics</h3>
+    <h5 class="subtitle is-6">Last Updated at: {{ update_time }}</h5>
   </header>
   <!-- end header -->
   <!-- totals -->
