Fix html tag order

--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -227,7 +227,7 @@
     <!-- series detail info -->
     <div class="box">
       <h1 class="title is-6">Series Details</h1>
-      <p><b>Publisher:</b> <a href="{% url 'publisher:detail' series.publisher.slug %}">{{ series.publisher }}</p></a>
+      <p><b>Publisher:</b> <a href="{% url 'publisher:detail' series.publisher.slug %}">{{ series.publisher }}</a></p>
       <p><b>Type:</b> {{ series.series_type }}</p>
       {% if series.volume %}
       <p><b>Volume:</b> {{ series.volume }}</p>
