Drop link to `metron_talker` on home page
Let's not encourage folks to use this until it's fixed.

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -84,14 +84,11 @@
           called <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.
         </p>
         <p class="content">
-          Want to tag your comic archives with metadata from Metron? You can use either of the following projects:
+          Want to tag your comic archives with metadata from Metron? You can use the following project:
         </p>
         <div class="content">
           <ul>
             <li><a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a></li>
-            <li><a href="https://github.com/comictagger/comictagger">ComicTagger</a> (with the Metron-Talker <a
-              href="https://github.com/comictagger/metron_talker">plugin</a>)
-            </li>
           </ul>
         </div>
 
