Use `issues` related name instead of `issue_set`

--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -130,7 +130,7 @@
         </a>
       </div>
     </div>
-    {% with issues=arc.issue_set.all %}
+    {% with issues=arc.issues.all %}
       {% if issues %}
       <div class="box">
         <h1 class="title is-5">List of Issues</h1>
