Wrap `input` in a `label`

--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -31,7 +31,9 @@
         <form action="{% url 'series:search' %}" method="get" accept-charset="utf-8">
           <div class="field has-addons">
             <p class="control">
-              <input class="input" name="q" type="search" placeholder="Find a series">
+              <label>
+                <input class="input" name="q" type="search" placeholder="Find a series">
+              </label>
             </p>
             <p class="control">
               <button class="button">Search</button>
