Use `characters` related name instead of `character_set`

--- a/comicsdb/templates/comicsdb/universe_detail.html
+++ b/comicsdb/templates/comicsdb/universe_detail.html
@@ -113,7 +113,7 @@
       </div>
       <!-- end desc -->
       <!-- characters -->
-      {% with characters=universe.character_set.all %}
+      {% with characters=universe.characters.all %}
         {% if characters %}
           <div class="box">
             <div class="columns">
