--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -113,7 +113,7 @@
       </div>
       <!-- end summary -->
       <!-- members -->
-      {% with characters=team.character_set.all %}
+      {% with characters=team.characters.all %}
         {% if characters %}
           <div class="box">
             <div class="columns">
