Use `universes` related name instead of `universe_set`

--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -124,7 +124,7 @@
       <!-- end of summary -->
 
       <!-- universe counts-->
-      {% with universes=publisher.universe_set.all %}
+      {% with universes=publisher.universes.all %}
         {% if universes %}
           <div class="box">
             <div class="columns">
