Fix broken Bulma logo in the footer

--- a/static/site/css/base.css
+++ b/static/site/css/base.css
@@ -27,7 +27,7 @@ padding-bottom: 2px;
 #bulma-logo {
     padding-left: 18px;
     height: 20px;
-    background: url(https://bulma.io/images/bulma-logo-white.png) no-repeat center;
+    background: url(https://bulma.io/assets/brand/Bulma%20Logo%20White.png) no-repeat center;
     background-size: 60px;
     color: #00000000;
 }
