Show type of series for Digital Chapters.

--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -143,6 +143,7 @@
                 {% if i.issue__series__series_type == 10 %}TPB
                 {% elif i.issue__series__series_type == 9 %}GN
                 {% elif i.issue__series__series_type == 8 %}HC
+                {% elif i.issues__series__series_type == 12 %}Digital    
                 {% endif %}
                 ({{ i.issue__series__year_began }})
               </a>:
