--- a/comicsdb/templates/comicsdb/universe_detail.html
+++ b/comicsdb/templates/comicsdb/universe_detail.html
@@ -202,6 +202,7 @@
                       {% if i.issues__series__series_type == 10 %}TPB
                       {% elif i.issues__series__series_type == 9 %}GN
                       {% elif i.issues__series__series_type == 8 %}HC
+                      {% elif i.issues__series__series_type == 12 %}Digital
                       {% endif %}
                       ({{ i.issues__series__year_began }})
                     </a>:
